# hacknu2024

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  parseForteBank.py  pyproject.toml
api/api/: settings.py
hacknu/: manage.py
hacknu/core/: models.py
hacknu/core/migrations/: 0001_initial.py  0002_usercashback.py
hacknu/hacknu/: asgi.py  settings.py  wsgi.py
